--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "contentful": "^8.4.2",
+    "mapbox-gl": "^2.3.1",
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-mapbox-gl": "^5.1.1",
+    "sass": "^1.35.2"
   }
 }
