--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-map-gl": "^6.1.16",
     "react-mapbox-gl": "^5.1.1",
     "sass": "^1.35.2"
   }
