--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "contentful": "^8.4.2",
+    "d3-ease": "^3.0.1",
     "mapbox-gl": "^2.3.1",
     "next": "10.0.8",
     "react": "17.0.1",
