--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.0.0",
     "contentful": "^8.4.2",
-    "d3-ease": "^3.0.1",
+    "d3-ease": "^2.0.0",
+    "gsap": "npm:@gsap/shockingly@^3.7.1",
     "mapbox-gl": "^2.3.1",
     "next": "10.0.8",
+    "next-transpile-modules": "^8.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-map-gl": "^6.1.16",
     "react-mapbox-gl": "^5.1.1",
-    "sass": "^1.35.2"
+    "react-spring": "^9.2.4",
+    "sass": "^1.35.2",
+    "swiper": "^6.7.5"
   }
 }
