--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # next.js
 /.next/
 /out/
+next.config.js
 
 # production
 /build
@@ -26,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
