--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-transpile-modules": "^8.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-lazy-blur-image": "^0.1.2",
     "react-map-gl": "^6.1.16",
     "react-mapbox-gl": "^5.1.1",
     "react-spring": "^9.2.4",
