--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-lazy-blur-image": "^0.1.2",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-map-gl": "^6.1.16",
     "react-mapbox-gl": "^5.1.1",
     "react-spring": "^9.2.4",
