--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.0.8",
     "next-transpile-modules": "^8.0.0",
     "react": "17.0.1",
+    "react-div-100vh": "^0.6.0",
     "react-dom": "17.0.1",
     "react-lazy-blur-image": "^0.1.2",
     "react-lazy-load-image-component": "^1.5.1",
